Fix tabs on smaller screen (Overview, Model Pages), Allow system dropdown to scale infinitely (System Page)
Former-commit-id: efd39f9a972f7785ee53c469eff8aaca0316d71d [formerly 98424956b36c82c66ee5b97590dc34e9868619e0]
Former-commit-id: 473610092207cff165dafb0deb4d0d840f10490f

--- a/deeplearning4j-ui-parent/deeplearning4j-play/src/main/resources/deeplearning4jUiAssets/css/style.css
+++ b/deeplearning4j-ui-parent/deeplearning4j-play/src/main/resources/deeplearning4jUiAssets/css/style.css
@@ -521,6 +521,8 @@ a.brand span {
   	float: left;
   	min-width: 160px;
 	max-width: 300px;
+	height: 50vh;
+	overflow: auto;
   	padding: 0px 0;
   	margin: 5px 0 0 0;
   	list-style: none;
